[gd_scene load_steps=19 format=2]

[ext_resource path="res://entities/enemies/attack_ship/AttackShip.gd" type="Script" id=1]
[ext_resource path="res://entities/enemies/attack_ship/assets/enemyBlack1.png" type="Texture" id=2]
[ext_resource path="res://modules/movement/Steering.tscn" type="PackedScene" id=3]
[ext_resource path="res://modules/health/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://weapons/muzzle/Muzzle.tscn" type="PackedScene" id=5]
[ext_resource path="res://weapons/bullet/EnemyBullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://modules/aim_target/AimTarget.tscn" type="PackedScene" id=7]
[ext_resource path="res://modules/stats/NPCAttributes.tscn" type="PackedScene" id=8]
[ext_resource path="res://stats/npc/attributes/AttackShipAttributes.tres" type="Resource" id=9]
[ext_resource path="res://modules/movement/actions/Movement.tscn" type="PackedScene" id=10]
[ext_resource path="res://modules/select_area/SelectArea.tscn" type="PackedScene" id=11]
[ext_resource path="res://modules/movement/actions/FollowLeader.tscn" type="PackedScene" id=12]
[ext_resource path="res://modules/movement/actions/PursuitTarget.tscn" type="PackedScene" id=13]
[ext_resource path="res://modules/movement/actions/ArriveAtTarget.tscn" type="PackedScene" id=14]
[ext_resource path="res://modules/movement/actions/Wander.tscn" type="PackedScene" id=15]
[ext_resource path="res://modules/movement/actions/Wander.gd" type="Script" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 500.0

[sub_resource type="CircleShape2D" id=2]
radius = 1000.0

[node name="AttackShip" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 45
script = ExtResource( 1 )
bullet = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -16.8184, -46.3633, 39.309, -24.9588, 36.6929, -10.6891, 10.7696, -15.2079, 16.9532, -10.927, 16.2397, 12.1423, 10.7696, 17.1367, 35.2659, 9.76403, 40.7359, 24.0337, -14.4401, 45.4382, -40.839, 30.455, -33.942, 12.1423, -24.191, 9.05054, -23.2397, -9.26218, -33.4663, -10.927, -41.3146, -29.2397 )

[node name="Steering" parent="." instance=ExtResource( 3 )]

[node name="Health" parent="." instance=ExtResource( 4 )]

[node name="NPCStats" parent="." instance=ExtResource( 8 )]
attributes = ExtResource( 9 )

[node name="Movement" parent="." instance=ExtResource( 10 )]

[node name="FollowLeader" parent="Movement" instance=ExtResource( 12 )]
max_speed = 265.0
mass = 2.0
max_force = 10.0
rotation_speed = 10.0
arrival_distance = 100.0
follow_distance = 100.0
separation_radius = 50.0
max_separation = 1.5

[node name="ArriveAtTarget" parent="Movement" instance=ExtResource( 14 )]
max_speed = 280.0
mass = 2.0
max_force = 10.0
rotation_speed = 10.0
arrival_distance = 100.0

[node name="PursuitTarget" parent="Movement" instance=ExtResource( 13 )]
max_speed = 300.0
mass = 2.0
max_force = 10.0
rotation_speed = 10.0

[node name="Wander" parent="Movement" instance=ExtResource( 15 )]
script = ExtResource( 16 )
max_speed = 100.0
mass = 2.0
max_force = 10.0
rotation_speed = 5.0
cirlce_distance = 150.0
circle_radius = 20.0
angle_change = 25.0

[node name="Muzzles" type="Node2D" parent="."]

[node name="MuzzleLeft" parent="Muzzles" instance=ExtResource( 5 )]
position = Vector2( 45, -15 )
rotation = 0.00872665

[node name="MuzzleRight" parent="Muzzles" instance=ExtResource( 5 )]
position = Vector2( 45, 15 )
rotation = -0.00872665

[node name="FireRate" type="Timer" parent="."]

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 1 )

[node name="FollowRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowRange"]
shape = SubResource( 2 )

[node name="SelectArea" parent="." instance=ExtResource( 11 )]

[node name="AimTarget" parent="." instance=ExtResource( 7 )]
scale = Vector2( 0.1, 0.1 )
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
[connection signal="body_entered" from="FollowRange" to="." method="_on_FollowRange_body_entered"]
[connection signal="body_exited" from="FollowRange" to="." method="_on_FollowRange_body_exited"]
[connection signal="input_event" from="SelectArea" to="." method="_on_SelectArea_input_event"]
